--- a/A Comprehensive ML Workflow with Python.ipynb
+++ b/A Comprehensive ML Workflow with Python.ipynb
@@ -5,7 +5,7 @@
         "_uuid": "a8f9622945156d6337ba73c481da2de7efef7384"
       },
       "cell_type": "markdown",
-      "source": "### <div style=\"text-align: center\">A Comprehensive Machine Learning Workflow with Python </div>\n\n<div style=\"text-align: center\">There are plenty of <b>courses and tutorials</b> that can help you learn machine learning from scratch but here in <b>Kaggle</b>, I want to solve <font color=\"red\"><b>Titanic competition</b></font>  a popular machine learning Dataset as a comprehensive workflow with python packages. \nAfter reading, you can use this workflow to solve other real problems and use it as a template to deal with <b>machine learning</b> problems.</div>\n<div style=\"text-align:center\">last update: <b>15/12/2018</b></div>\n\n\n\n>###### You may  be interested have a look at 10 Steps to Become a Data Scientist: \n\n1. [Leren Python](https://www.kaggle.com/mjbahmani/the-data-scientist-s-toolbox-tutorial-1)\n2. [Python Packages](https://www.kaggle.com/mjbahmani/the-data-scientist-s-toolbox-tutorial-2)\n3. [Mathematics and Linear Algebra](https://www.kaggle.com/mjbahmani/linear-algebra-for-data-scientists)\n4. [Programming &amp; Analysis Tools](https://www.kaggle.com/mjbahmani/20-ml-algorithms-15-plot-for-beginners)\n5. [Big Data](https://www.kaggle.com/mjbahmani/a-data-science-framework-for-quora)\n6. [Data visualization](https://www.kaggle.com/mjbahmani/top-5-data-visualization-libraries-tutorial)\n7. [Data Cleaning](https://www.kaggle.com/mjbahmani/machine-learning-workflow-for-house-prices)\n8. [How to solve a Problem?](https://www.kaggle.com/mjbahmani/the-data-scientist-s-toolbox-tutorial-2)\n9. [Machine Learning](https://www.kaggle.com/mjbahmani/a-comprehensive-ml-workflow-with-python)\n10. [Deep Learning](https://www.kaggle.com/mjbahmani/top-5-deep-learning-frameworks-tutorial)\n\n---------------------------------------------------------------------\nyou can Fork and Run this kernel on <font color=\"red\">Github</font>:\n\n> ###### [ GitHub](https://github.com/mjbahmani/10-steps-to-become-a-data-scientist)\n\n-------------------------------------------------------------------------------------------------------------\n **I hope you find this kernel helpful and some <font color=\"red\"><b>UPVOTES</b></font> would be very much appreciated**\n \n -----------"
+      "source": "### <div style=\"text-align: center\">A Comprehensive Machine Learning Workflow with Python </div>\n\n<div style=\"text-align: center\">There are plenty of <b>courses and tutorials</b> that can help you learn machine learning from scratch but here in <b>Kaggle</b>, I want to solve <font color=\"red\"><b>Titanic competition</b></font>  a popular machine learning Dataset as a comprehensive workflow with python packages. \nAfter reading, you can use this workflow to solve other real problems and use it as a template to deal with <b>machine learning</b> problems.</div>\n<div style=\"text-align:center\">last update: <b>04/01/2019</b></div>\n\n\n\n>###### You may  be interested have a look at 10 Steps to Become a Data Scientist: \n\n1. [Leren Python](https://www.kaggle.com/mjbahmani/the-data-scientist-s-toolbox-tutorial-1)\n2. [Python Packages](https://www.kaggle.com/mjbahmani/the-data-scientist-s-toolbox-tutorial-2)\n3. [Mathematics and Linear Algebra](https://www.kaggle.com/mjbahmani/linear-algebra-for-data-scientists)\n4. [Programming &amp; Analysis Tools](https://www.kaggle.com/mjbahmani/20-ml-algorithms-15-plot-for-beginners)\n5. [Big Data](https://www.kaggle.com/mjbahmani/a-data-science-framework-for-quora)\n6. [Data visualization](https://www.kaggle.com/mjbahmani/top-5-data-visualization-libraries-tutorial)\n7. [Data Cleaning](https://www.kaggle.com/mjbahmani/machine-learning-workflow-for-house-prices)\n8. [How to solve a Problem?](https://www.kaggle.com/mjbahmani/the-data-scientist-s-toolbox-tutorial-2)\n9. [Machine Learning](https://www.kaggle.com/mjbahmani/a-comprehensive-ml-workflow-with-python)\n10. [Deep Learning](https://www.kaggle.com/mjbahmani/top-5-deep-learning-frameworks-tutorial)\n\n---------------------------------------------------------------------\nyou can Fork and Run this kernel on <font color=\"red\">Github</font>:\n\n> ###### [ GitHub](https://github.com/mjbahmani/10-steps-to-become-a-data-scientist)\n\n-------------------------------------------------------------------------------------------------------------\n **I hope you find this kernel helpful and some <font color=\"red\"><b>UPVOTES</b></font> would be very much appreciated**\n \n -----------"
     },
     {
       "metadata": {
@@ -1141,7 +1141,7 @@
         "_uuid": "452bdee0f7c81124b09f5c95ba145f852270873d"
       },
       "cell_type": "markdown",
-      "source": "## 7-7 DecisionTreeRegressor"
+      "source": "<a id=\"77\"></a> <br>\n## 7-7 DecisionTreeRegressor"
     },
     {
       "metadata": {
@@ -1175,10 +1175,57 @@
     },
     {
       "metadata": {
+        "_uuid": "3635407db189710dc03bdcd793c4ddfaa017d6fe"
+      },
+      "cell_type": "markdown",
+      "source": "<a id=\"78\"></a> <br>\n## 7-8 HuberRegressor"
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "657cfc52d91bec6a4600930d171f0192791ce67d"
+      },
+      "cell_type": "code",
+      "source": "from sklearn.linear_model import HuberRegressor",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "973c34c4299d9721344b9e2931043cd95f897a6e"
+      },
+      "cell_type": "code",
+      "source": "# Define model. Specify a number for random_state to ensure same results each run\nhuber = HuberRegressor()\n",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "bf20128d964971fc99420aeab921014de0fd952e"
+      },
+      "cell_type": "code",
+      "source": "# Fit model\nhuber.fit(X_train, y_train)",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "trusted": true,
+        "_uuid": "f98a0e1139be3ad938c924037a097b39877ccff6"
+      },
+      "cell_type": "code",
+      "source": "huber_prediction = huber.predict(X_test)\nhuber_score=accuracy_score(y_test, dt_prediction)\nprint(huber_score)",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "_uuid": "ddba8d3a95a81966359182e0a6dfc9ad31cdb9d9"
       },
       "cell_type": "markdown",
-      "source": "## 7-7 Submission"
+      "source": "## 7-9 Submission"
     },
     {
       "metadata": {
@@ -1202,7 +1249,7 @@
         "_uuid": "cf3679a51c72dbe2d2549b5fe97e4ac5f1fa0fa0"
       },
       "cell_type": "markdown",
-      "source": "you can Fork and Run this kernel on Github:\n> ###### [ GitHub](https://github.com/mjbahmani/Machine-Learning-Workflow-with-Python)\n\n--------------------------------------\n\n **I hope you find this kernel helpful and some <font color=\"red\"><b>UPVOTES</b></font> would be very much appreciated** "
+      "source": "You can Fork and Run this kernel on Github:\n> ###### [ GitHub](https://github.com/mjbahmani/Machine-Learning-Workflow-with-Python)\n\n--------------------------------------\n\n **I hope you find this kernel helpful and some <font color=\"red\"><b>UPVOTES</b></font> would be very much appreciated** "
     },
     {
       "metadata": {
@@ -1218,7 +1265,7 @@
         "_uuid": "3218340bb7dfc4ab53987820284a5c2b1c34eb45"
       },
       "cell_type": "markdown",
-      "source": "\n\nGo to first step: [Course Home Page](https://www.kaggle.com/mjbahmani/10-steps-to-become-a-data-scientist)\n\nGo to next step : [Titanic](https://www.kaggle.com/mjbahmani/a-comprehensive-ml-workflow-with-python)\n"
+      "source": "Go to first step: [Course Home Page](https://www.kaggle.com/mjbahmani/10-steps-to-become-a-data-scientist)\n\nGo to next step : [Titanic](https://www.kaggle.com/mjbahmani/a-comprehensive-ml-workflow-with-python)\n"
     }
   ],
   "metadata": {
